--- a/app/templates/users/profile.html
+++ b/app/templates/users/profile.html
@@ -1,18 +1,43 @@
 {% extends "base.html" %}
-
 {% block title %}Профиль{% endblock %}
-
 {% block content %}
-<div class="profile-container">
-<h2>Профиль пользователя</h2>
-<div class="profile-info">
-<p><strong>Логин:</strong> {{ user.username }}</p>
-<p><strong>Email:</strong> {{ user.email }}</p>
-{% if user.full_name %}
-<p><strong>ФИО:</strong> {{ user.full_name }}</p>
-{% endif %}
-<p><strong>Зарегистрирован:</strong> {{ user.created_at.strftime('%d.%m.%Y %H:%M') }}</p>
+<div class="author__container">
+<div class="author__details">
+<div class="ava">
+<img class="ava__pic" src="{{ user.avatar or '/static/images/ava-1.png' }}" alt="{{ user.username }}'s avatar">
 </div>
-<a href="" class="btn btn-secondary">Выйти</a>
+<div style="margin-left:32px;">
+<div class="author__man h4 confirm">{{ user.username }}</div>
+</div>
+</div>
+{% if request.state.user and (request.state.user.id == user.id or request.state.user.is_superuser) %}<div class="author__btns">
+<a class="btn btn_purple author__btn" href="/user/{{ user.username }}/edit">Редактировать</a>
+</div>{% endif %}
+</div>
+<div class="box" style="max-width:540px;padding:32px 32px 16px 32px;">
+<div class="author__line">
+<div class="author__category">Email:</div>
+<div>{{ user.email }}</div>
+</div>
+<div class="author__line">
+<div class="author__category">Имя и Фамилия:</div>
+<div>{{ user.full_name }}</div>
+</div>
+<div class="author__line">
+<div class="author__category">Дата регистрации:</div>
+<div>{{ user.created_at.strftime('%d.%m.%Y') if user.created_at else "-" }}</div>
+</div>
+<div class="author__line">
+<div class="author__category">День рождение:</div>
+<div>{{ user.birthday.strftime('%d.%m.%Y') if user.birthday else "-" }}</div>
+</div>
+<div class="author__line">
+<div class="author__category">Статус:</div>
+<div>{{ user.status or "-" }}</div>
+</div>
+<div class="author__line">
+<div class="author__category">О себе:</div>
+<div>{{ user.about or "Нет информации" }}</div>
+</div>
 </div>
 {% endblock %}
