--- a/app/templates/users/edit_profile.html
+++ b/app/templates/users/edit_profile.html
@@ -2,8 +2,8 @@
 {% block title %}Настройки профиля{% endblock %}
 {% block content %}
 <div class="popup popup_settings">
-<form class="popup__form" method="post" enctype="multipart/form-data" action="/user/{{ request.state.user.username }}/avatar">
-{% if request.session.get('error') %}<div class="error-message"><span>{{ request.session.pop('error') }}</span></div>{% endif %}
+<form class="popup__form" method="post" enctype="multipart/form-data" action="/user/{{ request.state.user.username }}/edit">
+{% if error %}<div class="error-message"><span>{{ error }}</span></div>{% endif %}
 <div class="popup__title h6">Настройки аккаунта</div>
 <div class="popup__user">
 <div class="popup__category caption-sm">Ваш аватар</div>
@@ -19,14 +19,11 @@
 <span id="avatar-filename" style="color:#aaa;font-size:13px;max-width:220px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;display:block;padding-left:6px;">
 {% if request.state.user.avatar %}{{ request.state.user.avatar.split('/')[-1] }}{% endif %}
 </span>
-<button class="popup__btn btn btn_purple" type="submit" style="min-width:120px;margin-top:8px;">Загрузить аватар</button>
 </div>
 </div>
 </div>
 </div>
 </div>
-</form>
-<form class="popup__form" method="post" action="/user/{{ request.state.user.username }}/edit">
 <div class="popup__fieldset">
 <div class="popup__row">
 <div class="popup__field field">
@@ -52,10 +49,6 @@
 <div class="popup__field field">
 <div class="field__label">Дата рождения</div>
 <div class="field__wrap"><input class="field__input" type="date" name="birthday" value="{{ request.state.user.birthday }}"></div>
-</div>
-<div class="popup__field field">
-<div class="field__label">Avatar (URL)</div>
-<div class="field__wrap"><input class="field__input" type="text" name="avatar" value="{{ request.state.user.avatar or '' }}"></div>
 </div>
 </div>
 </div>
